# AgentForgeOS

./: .gitattributes  .gitignore  AI_PIPELINE_SYSTEM.md  AgentForgeOS.code-workspace  BOOTSTRAP_PLAN.md  FINAL_BIBLE_COMPARISON.md  README.md  SYSTEM_ANALYSIS_REPORT.md  SYSTEM_ARCHITECTURE.md  SYSTEM_TEST_REPORT.md  UI_STUDIO_LAYOUT.md  backend.spec  compliance_report.json  compliance_test_report.py  final_research_system_summary.md  hell -NoProfile -Command $envAGENTFORGE_HOST=''127.0.0.1''; $envAGENTFORGE_PORT=''63996''; & ''DAgentForgeOSAgentForgeOS-Apprelease-20260322-100057win-unpackedresourcesbackend.exe'''  hell -NoProfile -Command git -C dAgentForgeOS diff --name-status HEAD -- frontendsrc  Select-Object -First 80'  pyrightconfig.json  requirements.txt  research_system_analysis_report.md  sitecustomize.py  start_server.py  test_env.py  test_imports.py  test_internet_scanner.py  test_moviepy_import.py  test_server_startup.py
.emergent/: emergent.yml
AgentForgeOS-App/: build_squirrel.js  main.js  package-lock.json  package.json
AgentForgeUI_Image References/: Tab Usages Info.txt
agents/: __init__.py  base_agent.py  pipeline.py
apps/: README.md
backend/: requirements.txt  server.py  test_gate1.py  test_gate10.py  test_gate2.py  test_gate3.py  test_gate4.py  test_gate5.py  test_gate6.py  test_gate7.py  test_gate8.py  test_gate9.py
bridge/: __init__.py  bridge_security.py  bridge_server.py  routes.py
build_system/: docker_sandbox.py  recursive_loop.py  simulation_engine.py
desktop/: Cargo.toml  README.md  tauri.conf.json
desktop/src/: main.rs
(+449 files in other folders)
