[package]
name = "agentforgeos-desktop"
version = "0.1.0"
description = "AgentForgeOS Tauri desktop runtime"
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }
